fix default card spacing

--- a/packages/webawesome/src/components/card/card.css
+++ b/packages/webawesome/src/components/card/card.css
@@ -1,5 +1,5 @@
 :host {
-  --spacing: var(--wa-space-xl);
+  --spacing: var(--wa-space-l);
   --border-width: var(--wa-panel-border-width);
   --outlined-background-color: var(--wa-color-surface-default);
   --outlined-border-color: var(--wa-color-surface-border);
